# aqua

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pipelines.toml.sample  prometheus.yml
.github/workflows/: ci.yml
collector/: Cargo.toml  Dockerfile
collector/src/: main.rs
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/dashboards/files/: dashboard.json
grafana/provisioning/datasources/: datasource.yaml
mcp/: tools.yaml
