[package]
name = "aqua"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["default-tls"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1"
once_cell = "1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = "thin"
strip = true
